--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,37 @@
-# Core Dependencies
-langgraph>=0.1.0
-langchain>=0.1.0
-langchain-openai>=0.1.0
-langchain-anthropic>=0.1.0
-langsmith>=0.1.0
 
-# Data Validation
+# Core dependencies
+langgraph>=0.0.20
+langchain>=0.1.0
 pydantic>=2.5.0
 pydantic-settings>=2.1.0
-typing-extensions>=4.8.0
-
-# Environment
+google-generativeai>=0.3.0
 python-dotenv>=1.0.0
 
-# Repository Analysis
+# Repository analysis
 gitpython>=3.1.40
-astroid>=3.0.0
-gitingest>=0.1.0
 
-# Document Analysis
+# PDF processing
+PyPDF2>=3.0.0
 docling>=1.0.0
-pypdf2>=3.0.0
-
-# Image Analysis
+PyMuPDF>=1.23.0
 pillow>=10.0.0
-pdf2image>=1.16.0
-opencv-python>=4.8.0
 
-# Utilities
-requests>=2.31.0
+# LangSmith tracing
+langsmith>=0.1.0
+
+# AST utilities
+astor>=0.8.1
+
+# Type hints
+typing-extensions>=4.8.0
+
+# Web utilities
 python-multipart>=0.0.6
 
-# Testing
+
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
-pytest-cov>=4.1.0
-
-# Development
 black>=23.0.0
 isort>=5.12.0
 mypy>=1.5.0
+ruff>=0.1.0
