--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,60 @@
+# Core LangGraph and LangChain
+langgraph>=0.0.20,<0.1.0
+langchain>=0.1.0,<0.2.0
+langchain-core>=0.1.0,<0.2.0
+langchain-community>=0.0.10,<0.1.0
+langsmith>=0.0.50,<0.1.0
 
-# Core dependencies
-langgraph>=0.0.20
-langchain>=0.1.0
-pydantic>=2.5.0
-pydantic-settings>=2.1.0
-google-generativeai>=0.3.0
-python-dotenv>=1.0.0
+# LLM Provider - Groq
+groq>=0.4.0,<0.5.0
 
-# Repository analysis
-gitpython>=3.1.40
+# Type System & Validation
+pydantic>=2.0.0,<3.0.0
+pydantic-settings>=2.0.0,<3.0.0
+typing-extensions>=4.8.0,<5.0.0
 
-# PDF processing
-PyPDF2>=3.0.0
-docling>=1.0.0
-PyMuPDF>=1.23.0
-pillow>=10.0.0
+# Code Analysis - AST and Tree-sitter
+tree-sitter>=0.20.0,<0.21.0
+tree-sitter-languages>=1.5.0 # Pre-built language grammars
+astor>=0.8.1,<0.9.0  # AST utilities
 
-# LangSmith tracing
-langsmith>=0.1.0
+# Git Operations
+GitPython>=3.1.0,<4.0.0
 
-# AST utilities
-astor>=0.8.1
+# PDF Processing - Docling and supporting libraries
+docling>=0.1.0,<0.2.0
+PyMuPDF>=1.23.0,<2.0.0  # fitz for image extraction
+pdfplumber>=0.10.0,<0.11.0  # Alternative PDF parsing
+pypdf2>=3.0.0,<4.0.0
 
-# Type hints
-typing-extensions>=4.8.0
+# Image Processing
+Pillow>=10.0.0,<11.0.0
+opencv-python>=4.8.0,<5.0.0  # Advanced image processing
 
-# Web utilities
-python-multipart>=0.0.6
+# Environment & Configuration
+python-dotenv>=1.0.0,<2.0.0
+pyyaml>=6.0,<7.0
 
+# Utilities
+requests>=2.31.0,<3.0.0
+tqdm>=4.66.0,<5.0.0
+colorama>=0.4.6,<0.5.0
+click>=8.1.0,<9.0.0  # CLI utilities
+rich>=13.0.0,<14.0.0  # Pretty console output
 
-pytest>=7.4.0
-pytest-asyncio>=0.21.0
-black>=23.0.0
-isort>=5.12.0
-mypy>=1.5.0
-ruff>=0.1.0
+# Data Processing
+numpy>=1.24.0,<2.0.0
+pandas>=2.0.0,<3.0.0
+
+# Async Support
+aiohttp>=3.9.0,<4.0.0
+asyncio>=3.4.3,<4.0.0
+
+# Testing & Development (optional - can be moved to dev-requirements.txt)
+pytest>=7.0.0,<8.0.0
+pytest-asyncio>=0.21.0,<0.22.0
+pytest-cov>=4.0.0,<5.0.0
+black>=23.0.0,<24.0.0
+ruff>=0.1.0,<0.2.0
+mypy>=1.0.0,<2.0.0
+pre-commit>=3.0.0,<4.0.0
