--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,10 @@ dependencies = [
     "black>=23.0.0,<24.0.0",
     "click>=8.1.0,<9.0.0",
     "colorama>=0.4.6,<0.5.0",
-    "docling>=0.1.0,<0.2.0",
+    "docling>=1.3.0",
     "gitpython>=3.1.0,<4.0.0",
     "groq>=0.4.0,<0.5.0",
+    "httpx==0.27.2",
     "langchain>=0.1.0,<0.2.0",
     "langchain-community>=0.0.10,<0.1.0",
     "langchain-core>=0.1.0,<0.2.0",
