--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ pydantic>=2.0.0,<3.0.0
 pydantic-settings>=2.0.0,<3.0.0
 typing-extensions>=4.8.0,<5.0.0
 
+httpx==0.27.2  # Specific version for compatibility with Groq SDK
+
 # Code Analysis - AST and Tree-sitter
 tree-sitter>=0.20.0,<0.21.0
 tree-sitter-languages>=1.5.0 # Pre-built language grammars
@@ -22,7 +24,7 @@ astor>=0.8.1,<0.9.0  # AST utilities
 GitPython>=3.1.0,<4.0.0
 
 # PDF Processing - Docling and supporting libraries
-docling>=0.1.0,<0.2.0
+docling>=1.3.0
 PyMuPDF>=1.23.0,<2.0.0  # fitz for image extraction
 pdfplumber>=0.10.0,<0.11.0  # Alternative PDF parsing
 pypdf2>=3.0.0,<4.0.0
